test/modules/bradc/multipleModulesSameName.good
multipleModulesSameName.chpl:1: error: 'foo' has multiple definitions, redefined at:
  multipleModulesSameName.chpl:10
