test/modules/bradc/multipleModulesSameName.chpl
module foo {
  var x;

  def main() {
    writeln("In foo");
  }
}


module foo {
  var y;

}
